--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".Evacuation"/>
         <activity android:name=".EmergencyHotline"/>
+        <activity android:name=".Tips"/>
         <service android:name=".CustomService"/>
     </application>
 
